Closed Bug 498212 Opened 16 years ago Closed 15 years ago

Intermittent nsTArray_base leak in test_nsAbAutoCompleteSearch*.js

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.1b1

People

(Reporter: standard8, Assigned: ZaneUJi)

References

Details

(Keywords: memory-leak)

Attachments

(2 files, 1 obsolete file)

Seen on various leak logs since the first part of bug 438922 landed, but definitely intermittent: == BloatView: ALL (cumulative) LEAK STATISTICS |<----------------Class--------------->|<-----Bytes------>|<----------------Objects---------------->|<--------------References-------------->| Per-Inst Leaked Total Rem Mean StdDev Total Rem Mean StdDev 0 TOTAL 34 4 101542 1 ( 979.77 +/- 1642.76) 232967 0 ( 921.99 +/- 1715.06) 135 nsTArray_base 4 4 25 1 ( 10.71 +/- 5.56) 0 0 ( 0.00 +/- 0.00) test_nsAbAutoCompleteSearch1.js and 3 seem to get this the most.
Depends on: 438922
Blocks: 438871
No longer depends on: 438922
Whiteboard: [orange]
No longer blocks: 438871
Flags: wanted-thunderbird3+
Whiteboard: [orange]
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090530 SeaMonkey/2.0b1pre] (experimental/_m-c_, home, optim default) (W2Ksp4) (http://hg.mozilla.org/mozilla-central/rev/e44d9c0f4805 +http://hg.mozilla.org/comm-central/rev/62f2c362a9a4 + bug 493008 patches) Ftr, this build already had this bug.
Attached file Allocation log
As the log shows, a nsTArray_base object is created by a destructor.
Attached patch Patch (obsolete) — Splinter Review
Attachment #422523 - Flags: review?(bugzilla)
Attached patch PatchSplinter Review
Corrected coding style
Attachment #422523 - Attachment is obsolete: true
Attachment #423146 - Flags: review?(bugzilla)
Attachment #422523 - Flags: review?(bugzilla)
Comment on attachment 423146 [details] [diff] [review] Patch Thanks for the patch.
Attachment #423146 - Flags: superreview?(bienvenu)
Attachment #423146 - Flags: review?(bugzilla)
Attachment #423146 - Flags: review+
Assignee: nobody → ZaneUJi
Status: NEW → ASSIGNED
Comment on attachment 423146 [details] [diff] [review] Patch Thx, Zane. I'll try to land this today.
Attachment #423146 - Flags: superreview?(bienvenu) → superreview+
fix landed. I've taken the liberty of making the same change to the db cache remove element code.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1b1
(In reply to comment #7) http://hg.mozilla.org/comm-central/rev/2044fbaf8ed5 2.8 + if (m_dbCache) 2.9 + m_dbCache->RemoveElement(pMessageDB); Nit: missing indentation.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: