fix bug 498212, intermittent leak in addr book tests, r=neil, sr=bienvenu, with same fix made to db cache handling by bienvenu